apps/base/bulwark/bulwark.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulwark-service
  namespace: bulwark-system
spec:
  selector:
    app: bulwark
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
