apps/base/bulwark/bulwark.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bulwark-ingress-route
  namespace: bulwark-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webmail.winetree94.com`)
      kind: Rule
      services:
        - name: bulwark-service
          port: 3000
  tls:
    secretName: letsencrypt-cert
